Convert serial library adapter to use spi